--- a/medals/src/App.css
+++ b/medals/src/App.css
@@ -3,12 +3,22 @@
   background-color: #61dafb;
 }
 
-.Country, .Gold{
+/* .AppHeader {
+  width: 100%;
+    margin: 10px;
+    position: fixed;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: #BBBBF1;
+} */
+
+.Country, .Medals{
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 15px;
 }
 
-.Gold{
+.Medals{
   display: flex;
   flex-wrap:nowrap;
   justify-content: space-evenly;
