--- a/medals/src/App.css
+++ b/medals/src/App.css
@@ -24,3 +24,18 @@
   flex-wrap:nowrap;
   justify-content: space-evenly;
 }
+
+.Country-Title{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.New-Country{
+  cursor: pointer;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  z-index: 100;
+}
