--- a/medals/src/App.css
+++ b/medals/src/App.css
@@ -39,3 +39,29 @@
   right: 50px;
   z-index: 100;
 }
+
+
+.loginLink, .logout {
+  color: #000;
+  position:absolute;
+  bottom: 25px;
+  left: 50px;
+  font-size: x-large;
+  font-weight: 500;
+}
+
+.logoutLink {
+  color: #000;
+}
+
+
+.loginForm {
+  border: 1px solid #999;
+  background-color: #dedede;
+  padding: 8px;
+  border-radius: 4px;
+  position: absolute;
+  width: 300px;
+  bottom: 65px;
+  left: 8px;
+}
